# timbre

./: .gitignore  README.md  pyproject.toml  render.yaml  requirements-unsloth.txt
app/: __init__.py  common.py  gpu.py  orchestrator.py  server.py  watchdog.py  web.py
backend/: Dockerfile  auth.py  conftest.py  curate.py  fly.toml  ingest.py  main.py  mcp_server.py  pipeline.py  pyproject.toml  requirements.txt  status.py  synth.py  test_auth.py  test_ingest.py  test_mcp.py  test_status.py
configs/: lora_llama32_3b.yaml
frontend/: Caddyfile  Dockerfile  fly.toml  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  Guide.jsx  api.js  index.jsx  styles.css
gpu/: app.py  pyproject.toml
scripts/: clean_mbox.py  convert_to_mlx.py  inspect_mbox.py  modal_convert.py  modal_convert_adapter.py  modal_convert_clean.py  modal_fix_gguf.py  modal_full_run.py  modal_proper_merge.py  modal_run.py  modal_solve.py  modal_test_model.py  synthesize.py  train_unsloth.py
skills/timbre/: SKILL.md
