[project]
name = "fine-tune-style-clone"
version = "0.1.0"
description = "Ingest personal email -> synthesize style pairs -> LoRA fine-tune -> GGUF for Ollama"
requires-python = ">=3.11,<3.13"

# Local deps: only what runs on this Mac. The stdlib scripts
# (inspect_mbox, clean_mbox, synthesize, convert_to_mlx) need nothing.
# modal launches the cloud training run.
dependencies = [
    "modal>=1.5",
]

# NOTE: the training stack (unsloth, torch, trl, bitsandbytes, ...) is
# CUDA-only and never installed locally. It lives in
# requirements-unsloth.txt and is installed inside the Modal GPU image
# (see scripts/modal_run.py). Keeping it out of here means `uv sync` stays
# fast and doesn't try to build torch on macOS.

[tool.uv]

[dependency-groups]
dev = [
    "gguf>=0.19.0",
]
# Keep the default sync lean: just the deps above, no extras.
